--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy":"vercel --prod"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.129",
-    "react-text-typist": "^1.1.7"
+    "react-text-typist": "^1.1.7",
+    "vercel": "^28.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
